--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -22,6 +22,7 @@ import { initReveal } from '../scripts/reveal';
   </head>
 
   <body>
+    <div class="site-bg" aria-hidden="true"></div>
     <Header />
 
     <main id="main-content">
