--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,9 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import Hero from '../components/blocks/Hero.astro';
+import TrustBanner from '../components/blocks/TrustBanner.astro';
 ---
 <BaseLayout>
-
+    <Hero />
+    <TrustBanner />
 </BaseLayout>
