--- a/src/components/blocks/TrustBanner.astro
+++ b/src/components/blocks/TrustBanner.astro
@@ -1,4 +1,4 @@
-<section class="trust-banner">
+<section class="trust-banner section--tighter sep sep--band sep--bottom">
     <div class="container trust-banner__inner">
       <ul class="trust-banner__list" aria-label="Waarom kiezen voor GW Systems">
         <li class="trust-banner__item">Snelle reactie</li>
