--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,8 +2,14 @@
 import BaseLayout from '../layouts/BaseLayout.astro';
 import Hero from '../components/blocks/Hero.astro';
 import TrustBanner from '../components/blocks/TrustBanner.astro';
+import Services from '../components/blocks/ServicesSection.astro';
+import Workflow from '../components/blocks/Workflow.astro';
+import CTA from '../components/blocks/CTA.astro';
 ---
 <BaseLayout>
     <Hero />
     <TrustBanner />
+    <Services />
+    <Workflow />
+    <CTA />
 </BaseLayout>
