--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -6,6 +6,7 @@ Variables
 $colors: (
   brand: #e7b826,
   black: #0b0b0b,
+  light-black: rgba(11, 11, 11, 0.85),
   white: #ffffff,
 
   gray-900: #111111,
