small change to head fragment on index.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,13 @@ import Workflow from '../components/blocks/Workflow.astro';
 import CTA from '../components/blocks/CTA.astro';
 ---
 <BaseLayout>
+    <Fragment slot="head">
+        <title>GW Systems</title>
+        <meta
+          name="description"
+          content="GW Systems is uw betrouwbare elektricien voor slimme en duurzame installaties. Wij bieden vakkundige plaatsing, nette afwerking en transparante prijzen."
+        />
+      </Fragment>
     <Hero />
     <TrustBanner />
     <Services />
