changed forward on contact form

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -76,6 +76,7 @@ import { company } from "../data/company";
           <form
             name="contact"
             method="POST"
+            action="/bedankt"
             data-netlify="true"
             netlify-honeypot="bot-field"
           >
