cookie banner & GA

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@
 /* Layout */
 @use "layout/header";
 @use "layout/footer";
+@use "layout/cookie-banner";
 
 /* Components */
 @use "components/buttons";
