--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,12 +2,13 @@
 import "../styles/main.scss";
 import Header from "../components/layout/Header.astro";
 import Footer from "../components/layout/Footer.astro";
-import { initReveal } from '../scripts/reveal';
+import CookieBanner from "../components/layout/CookieBanner.astro";
 ---
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -30,6 +31,23 @@ import { initReveal } from '../scripts/reveal';
     <meta name="msapplication-TileColor" content="#0E0E0E" />
     <meta name="theme-color" content="#0E0E0E" />
 
+    <!-- Set Default consent for GA -->
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(...args: unknown[]) {
+        window.dataLayer.push(args);
+      }    
+      gtag('consent', 'default', {
+        analytics_storage: 'denied',
+        ad_storage: 'denied',
+        ad_user_data: 'denied',
+        ad_personalization: 'denied',
+        functionality_storage: 'granted',
+        security_storage: 'granted'
+      });
+    </script>
+    
+
 
     <!-- Page-specific head content (title/meta) -->
     <slot name="head" />
@@ -44,6 +62,7 @@ import { initReveal } from '../scripts/reveal';
     </main>
 
     <Footer />
+    <CookieBanner/ >
 
     <script>
       (function () {
