--- a/src/pages/diensten.astro
+++ b/src/pages/diensten.astro
@@ -98,7 +98,7 @@ const serviceImages = {
 
               <div class="dienst__faq-list">
                 {s.faq.map((item) => (
-                  <details class="faq-item" name={`FAQ-${s.label}`}>
+                  <details class="faq-item electric-border electric-border--dialog" name={`FAQ-${s.label}`}>
                     <summary class="faq-item__summary">{item.q}</summary>
                     <div class="faq-item__body">
                       <div class="faq-item__content">
